# spottl

./: .gitignore  README.md  main.py  old_pyproject.toml  pyproject.toml
spot/: __init__.py  impl.py  libbddx.so.0.0.0  libspotgen.so.0.0.0  libspotltsmin.so.0.0.0
spot-tl/: gen.py  impl.py
spot_tl/: ltsmin.py
spottl/: __init__.py  gen.py  impl.py  ltsmin.py
test/: test_translate.py
