[tool.poetry]
name = "spottl"
version = "0.2.11.3"
description = "Pip-installable version of spot library"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "gnp"
readme = "README.md"
packages = [{include = "spottl"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
