[project]
name = "spottl"
version = "2.13.0"
description = "\"Pip-installable version of spot library\""
authors = [
    {name = "Mikihisa Yuasa",email = "mik0915yua@outlook.com"}
]
license = {text = "GNP"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
